# RocketQR

./: Cargo.toml  Dockerfile
src/: main.rs  scraper.rs
static/: style.css
static/ac/: style.css
static/ac/gl/: style.css
static/ctrl/: style.css
static/hr/: style.css
static/hra/: style.css
static/hrs/: style.css
static/it/: style.css
static/md/: style.css
static/payroll/: style.css
templates/: ac.html.hbs  acgl.html.hbs  acp.html.hbs  acr.html.hbs  ctrl.html.hbs  hr.html.hbs  hra.html.hbs  index.html.hbs  it.html.hbs  md.html.hbs  payroll.html.hbs
