[package]
authors = ["Piotr Wojdalski"]
name = "qr-codes"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
rocket = { path = "core/lib" }

# in your application, you should enable only the template engine(s) used
[dependencies.rocket_dyn_templates]
path = "contrib/dyn_templates"
features = ["tera", "handlebars"]
